Added ICTS generateChildren() method
A non-goal ICTNode now generates children.
Next is to try x move combinations and generate MDDs for those paths that lead to the goal